--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <i class="fa fa-5x fa-cog fa-spin" aria-hidden="true"></i>
       <i class="fa fa-3x fa-cog" aria-hidden="true"></i>
     </div>
-    <h1 class="maintenance">Under Maintenance</h1>
-    <h2>Our developers are hard at work updating your system. Please wait while we do this. We have also made the spinning cogs to distract you.</h2>
+    <h1 class="maintenance">My portfolio is currently undergoing an update</h1>
+    <h2>I'm adding new projects, polishing some details, and making the experience better for you. Hang tight — it’ll be back online shortly. In the meantime, enjoy the spinning cogs doing their thing!</h2>
   </div>
 </div>
 
